# VkHashDAG

./: CMakeLists.txt  README.md
.github/workflows/: linux.yml  windows-mingw.yml  windows-msvc.yml
dep/: CMakeLists.txt
dep/MyVK/: CMakeLists.txt
dep/MyVK/dep/: CMakeLists.txt
dep/MyVK/include/myvk/: BufferBase.hpp  CommandBuffer.hpp  ComputePipeline.hpp  DescriptorSet.hpp  DescriptorSetLayout.hpp  ExportBuffer.hpp  ExternalMemoryUtil.hpp  GraphicsPipeline.hpp  ImGuiRenderer.hpp  ImageBase.hpp  ImageView.hpp  PhysicalDevice.hpp  QueryPool.hpp  RenderPass.hpp  ShaderModule.hpp  SyncHelper.hpp
dep/MyVK/src/: Allocator.cpp  CommandBuffer.cpp  ComputePipeline.cpp  DescriptorSet.cpp  DescriptorSetLayout.cpp  ExportBuffer.cpp  GraphicsPipeline.cpp  PhysicalDevice.cpp  PipelineLayout.cpp  QueryPool.cpp  RenderPass.cpp  ShaderModule.cpp
dep/ThreadPool/: CMakeLists.txt
dep/ThreadPool/include/: ThreadPool.h
dep/glm/: CMakeLists.txt
dep/libfork/: CMakeLists.txt
dep/libfork/include/libfork/schedule/: busy_pool.hpp
dep/libmorton/: CMakeLists.txt
dep/parallel-hashmap/: CMakeLists.txt
dep/thread-pool/: CMakeLists.txt
include/colorsvo/: ColorBlock.hpp  ColorPool.hpp
include/hashdag/: Color.hpp  ColorBlock.hpp  ColorPool.hpp  Config.hpp  EditMutex.hpp  Editor.hpp  Hasher.hpp  Iterator.hpp  Memory.hpp  NodeConfig.hpp  NodeCoord.hpp  NodePointer.hpp  NodePool.hpp  NodePoolGLMTraversal.hpp  NodePoolLibFork.hpp  NodePoolLibForkEdit.hpp  NodePoolThreadedEdit.hpp  NodePoolThreadedGC.hpp  NodePoolTraversal.hpp  Position.hpp  VBRColor.hpp  VBREditor.hpp  VBROctree.hpp  Vec3.hpp
shader/: CMakeLists.txt
shader/src/: beam.frag  crosshair.frag  crosshair.vert  dag.frag  quad.vert  trace.frag
src/: Camera.cpp  Camera.hpp  DAGColorOctree.cpp  DAGColorOctree.hpp  DAGColorPool.cpp  DAGColorPool.hpp  DAGNodePool.cpp  DAGNodePool.hpp  DAGRenderer.cpp  DAGRenderer.hpp  GPSQueueSelector.cpp  GPSQueueSelector.hpp  NodePool.cpp  NodePool.hpp  PagedVector.hpp  Range.hpp  VkPagedBuffer.cpp  VkPagedBuffer.hpp  VkSparseBinder.cpp  VkSparseBinder.hpp  main.cpp
src/rg/: BeamPass.cpp  BeamPass.hpp  CrosshairPass.cpp  CrosshairPass.hpp  DAGRenderGraph.cpp  DAGRenderGraph.hpp  TracePass.cpp  TracePass.hpp
test/: main.cpp  paged_vec_test.cpp  test.cpp  vbr_test.cpp
